# scoreboard

./: .gitignore  README.md  app.py  pyproject.toml
templates/: manage.html  view.html
